src/test/resources/frontendReference/invalid/syntaxErr/while/whileNodo.waccast
-- Compiling...
Errors detected during compilation! Exit code 100 returned.
Syntactic Error at 13:4 -- mismatched input 'skip' expecting {'-', '*', '/', '%', '+', '<', '<=', '>=', '>', '==', '!=', '&&', '||', 'do'}
1 parser error(s) detected, no further compilation attempted.
